# pythonanywhere-core

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yaml  test.yml  tests.yaml
docs/: conf.py  index.rst  installation.rst
docs/api/: files.rst  index.rst  resources.rst  webapp.rst  website.rst
docs/reference/: environment-variables.rst  exceptions.rst  index.rst  python-versions.rst
docs/reference/api/: base.rst  schedule.rst  students.rst
pythonanywhere_core/: base.py  exceptions.py  files.py  resources.py  schedule.py  students.py  webapp.py  website.py
tests/: conftest.py  test_base.py  test_files.py  test_resources.py  test_schedule.py  test_students.py  test_webapp.py  test_website.py
