[tool.poetry]
name = "pythonanywhere-core"
version = "0.2.7"
description = "API wrapper for programmatic management of PythonAnywhere services."
authors = ["PythonAnywhere <developers@pythonanywhere.com>"]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
keywords = ["pythonanywhere", "api", "cloud", "web hosting"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
requests = "^2.30.0"
snakesay = "^0.10.3"
typing_extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.10.0"
responses = "^0.25.0"
sphinx = "7.4.7"
sphinx-rtd-theme = "^3.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
